translate from to

--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -1,39 +1,42 @@
 {
-    "mapScope": "Map Scope",
-    "mapModesDict": {
-      "europe": "Europe",
-      "ukraine": "Ukraine and Neighbors"
+  "mapScope": "Map Scope",
+  "mapModesDict": {
+    "europe": "Europe",
+    "ukraine": "Ukraine and Neighbors"
+  },
+  "mapStyle": "Map Style",
+  "mapStyles": {
+    "Archaic": "Archaic",
+    "Modern": "Modern"
+  },
+
+  "mapBackground": "Map Background",
+  "mapBackgrounds": {
+    "Detailed": "Detailed",
+    "Blank": "Blank",
+    "Grayscale": "Grayscale"
+  },
+
+  "settings": "Settings",
+
+  "saved": "Saved events",
+
+  "noEvents": "No saved events yet",
+
+  "title": "Ukraine History Atlas",
+
+  "languageSwitcher": {
+    "english": {
+      "title": "English",
+      "flagAlt": "UK Flag"
     },
-    "mapStyle": "Map Style",
-    "mapStyles": {
-        "Archaic": "Archaic",
-        "Modern": "Modern"
-    },
-
-    "mapBackground": "Map Background",
-    "mapBackgrounds": {
-        "Detailed": "Detailed",
-        "Blank": "Blank",
-        "Grayscale": "Grayscale"
-    },
-
-    "settings": "Settings",
-
-    "saved": "Saved events",
-
-    "noEvents": "No saved events yet",
-
-    "title": "Ukraine History Atlas",
-
-    "languageSwitcher": {
-        "english": {
-          "title": "English",
-          "flagAlt": "UK Flag"
-        },
-        "ukrainian": {
-          "title": "Ukrainian",
-          "flagAlt": "Ukraine Flag"
-        }
-      }
-    
+    "ukrainian": {
+      "title": "Ukrainian",
+      "flagAlt": "Ukraine Flag"
+    }
+  },
+  "dateRange": {
+    "from": "From",
+    "to": "to"
   }
+}
