--- a/client/src/locales/ua/translation.json
+++ b/client/src/locales/ua/translation.json
@@ -41,6 +41,12 @@
     "to": "до"
   },
   "auth": {
-    "login": "Увійти"
+    "log_in": "Увійти",
+    "login": "Увійти",
+    "sign_up": "Реєстрація",
+    "make_changes": "Внесіть зміни в обліковий запис тут",
+    "name": "Ім'я",
+    "username": "Нікнейм",
+    "save_changes": "Зберегти"
   }
 }
