--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -40,10 +40,13 @@
     "to": "to"
   },
   "auth": {
+    "password": "Password",
+    "email": "Email",
     "log_in": "Log in",
     "login": "Login",
     "sign_up": "SignUp",
     "make_changes": "Make changes to your account here. Click save when you're done.",
+    "signup": "SignUp",
     "name": "Name",
     "username": "Username",
     "save_changes": "Save changes",
