--- a/client/src/locales/ua/translation.json
+++ b/client/src/locales/ua/translation.json
@@ -41,6 +41,7 @@
     "to": "до"
   },
   "auth": {
+    "already_have_account": "Вже є обліковий запис",
     "email": "Пошта",
     "log_in": "Увійти",
     "login": "Увійти",
