--- a/client/src/locales/ua/translation.json
+++ b/client/src/locales/ua/translation.json
@@ -41,6 +41,9 @@
     "to": "до"
   },
   "auth": {
+    "success_logged_in": "Ви успішно увійшли",
+    "invalid_credentials": "Неправильна пошта або пароль",
+    "success_registered": "Успішно зареєстровано",
     "already_have_account": "Вже є обліковий запис",
     "email": "Пошта",
     "log_in": "Увійти",
