--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -40,6 +40,7 @@
     "to": "to"
   },
   "auth": {
+    "success_loggout": "You have successfully logged out.",
     "success_logged_in": "You have successfully logged in.",
     "invalid_credentials": "Invalid email or password",
     "success_registered": "You have successfully registered. Please log in.",
