add checkbox setting for show land ruler

--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -18,7 +18,7 @@
   },
 
   "settings": "Settings",
-
+  "showLandRuler": "Show Land Ruler",
   "saved": "Saved events",
 
   "noEvents": "No saved events yet",
