--- a/client/src/locales/ua/translation.json
+++ b/client/src/locales/ua/translation.json
@@ -20,6 +20,7 @@
 
   "settings": "Налаштування",
 
+  "showLandRuler": "Показувати ландшафтний рулер",
   "saved": "Збережені події",
 
   "noEvents": "Відсутні події",
