show land lord switch in action

--- a/client/src/locales/ua/translation.json
+++ b/client/src/locales/ua/translation.json
@@ -20,7 +20,7 @@
 
   "settings": "Налаштування",
 
-  "showLandRuler": "Показувати ландшафтний рулер",
+  "showLandRuler": "Показувати правителя країни",
   "saved": "Збережені події",
 
   "noEvents": "Відсутні події",
