--- a/client/src/locales/ua/translation.json
+++ b/client/src/locales/ua/translation.json
@@ -17,6 +17,7 @@
     "Blank": "Порожня",
     "Grayscale": "Відтінки сірого"
   },
+  "settings_language": "Мова",
 
   "settings": "Налаштування",
 
@@ -63,5 +64,7 @@
     "save_password": "Зберегти пароль",
     "signup": "Реєстрація",
     "password": "Пароль"
-  }
+  },
+  "add_event": "Додати подію",
+  "pick_coords": "Оберіть координати на карті"
 }
